# PeppaPig

./: .gitignore  Dockerfile  PeppaPig第1季剧本台词.docx  SKILL-find_bugs.md  build.sh  ep15_Picnic_外挂.md  ep15_Picnic_外挂_v2.md  ep16_Musical_Instruments_外挂.md  ep52_School_Play_外挂.md  episodes_data.py  flashcard.py  library.py  main.py  push.sh  pyproject.toml  外挂攻略模板.md
static/: index.html
templates/: episode.html  index.html  library.html
xhs_generator/: generate_ep15.py  pyproject.toml
